# entrain

./: .gitignore  README.md
.claude/: session-memory.md
backend/: app.py  modal_app.py  requirements.txt
backend/fixtures/: edge_sample.json  make_sample_motion.py  sample_motion.json
backend/pipeline/: audio.py  contracts.py  generate.py
claude/: CLAUDE.md  entrain_wasm_build_brief.md
cpp/: CMakeLists.txt  api.cpp  build.sh  cleanup.cpp  core.hpp  math.hpp  retarget.cpp
docs/: BENCHMARK.md  SETUP.md
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/public/: character.glb  sample_motion.json
frontend/scripts/: benchmark.mjs  genParity.mjs
frontend/src/: App.tsx  Transport.tsx  Viewer.tsx  api.ts  index.css  retarget.ts
frontend/src/core/: entrain-core.d.ts  retargetCore.ts  wasm.ts
frontend/tests/: parity.test.ts
frontend/tests/fixtures/: golden.json  motion.json  skeleton.json
reference/: smpl_to_mixamo_retarget.js
